增加侧滑删除和移动功能

--- a/learnrecylerview2/src/main/res/layout/recylerview_item.xml
+++ b/learnrecylerview2/src/main/res/layout/recylerview_item.xml
@@ -6,8 +6,9 @@
     android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/item_style"
             android:orientation="vertical">
             <TextView
                 android:text="tv_title"
