--- a/learnrecylerview2/src/main/res/layout/activity_main.xml
+++ b/learnrecylerview2/src/main/res/layout/activity_main.xml
@@ -8,9 +8,31 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="384dp"
+        android:layout_height="511dp"
         android:id="@+id/rv"
         app:layout_constraintLeft_toLeftOf="@+id/activity_main"
         app:layout_constraintTop_toTopOf="@+id/activity_main" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="@+id/activity_main"
+        android:layout_marginRight="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rv" />
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab1"
+        app:srcCompat="@android:drawable/ic_delete"
+        app:layout_constraintBottom_toTopOf="@+id/fab"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="@+id/activity_main"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp" />
 </android.support.constraint.ConstraintLayout>
