--- a/learnrecylerview2/src/main/res/layout/activity_main.xml
+++ b/learnrecylerview2/src/main/res/layout/activity_main.xml
@@ -6,6 +6,10 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context="com.example.learnrecylerview2.MainActivity">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/swipe_container">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="384dp"
@@ -35,4 +39,5 @@
         app:layout_constraintRight_toRightOf="@+id/activity_main"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.constraint.ConstraintLayout>
